# PSP-DevLink

./: .gitattributes  .gitignore  DATA.PSP  README.md  compare_prx.py  config.ini  print_ref_stubs.py  print_stubs.py
PROUPDATE/: EBOOT.PBP
apps/desktop/: CMakeLists.txt
apps/desktop/src/: config_service.cpp  config_service.h  git_service.cpp  git_service.h  http_server.cpp  http_server.h  index_html.h  main.cpp  notification_service.cpp  notification_service.h  system_service.cpp  system_service.h  transport_usb.cpp  tui_service.cpp  tui_service.h
apps/psp/: EBOOT.PBP  Makefile  analyze.sh  build.sh  gen_specs.sh
apps/psp/driver/: Makefile  pspdl_driver.exp  pspdl_driver.prx  pspdl_driver_kernel.c  pspdl_ioctl.h
apps/psp/src/: main.c  message_router.c  message_router.h  transport_usb.c  ui.c  ui.h  usb_identity.h
docs/: DECISION_LOG.md  HANDOFF.md  MILESTONE_CHECKLIST.md  PROJECT_FOUNDATION.md  PROJECT_STATE.md
docs/architecture/: build.md  coding_standards.md  communication.md  desktop.md  overview.md  protocol.md  psp.md  repository.md  system_lifecycle.md  usb_transport.md
reference/: analyze_pbp.py  check_pbp.py  psp_no_net.specs
reference/PROUPDATE/: DATA.PSP
scripts/: connect_psp.sh  copy_eboot.sh  patch_prx.py
shared/protocol/: CMakeLists.txt
shared/protocol/include/protocol/: message.h  packet.h  payload.h  protocol.h  transport.h  version.h
shared/protocol/src/: packet.c  payload.c  transport_stub.c
test_hello/: EBOOT.PBP  Makefile  Makefile.kernel  main.c
